# cmake

cmake1/: CMakeLists.txt  liba.cpp  liba.h
cmake1/makefile/: Makefile  hellomake.c
cmake2/: CMakeLists.txt  function.cmake
cmake2/lib1/: class1.cpp  class1.h  lib1.cpp  lib1.h
cmake2/lib2/: lib2.cpp  lib2.h
cmake3/: CMakeLists.txt  main.cpp  version.hpp.in
cmake4/: CMakeLists.txt
cmake4/Modules/: FindA.cmake
